kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-app-svc
spec:
  selector:
    app: game-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
